--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -27,7 +27,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.4
   dio: ^4.0.4
   sqflite: ^2.0.1
   equatable: ^2.0.3
@@ -35,8 +35,8 @@ dependencies:
   flutter_bloc: ^8.0.1
   shared_preferences: ^2.0.11
   path_provider: ^2.0.8
-  path: ^1.7.0
-  pretty_dio_logger: ^1.1.1
+  path: ^1.8.0
+  pretty_dio_logger: ^1.2.0-beta-1
 dev_dependencies:
   flutter_test:
     sdk: flutter
