--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.0.1
   flutter_screenutil: ^5.0.2
+  get_it: ^7.2.0
   path: ^1.8.0
   path_provider: ^2.0.8
   pretty_dio_logger: ^1.2.0-beta-1
